punto 6 listo y tp1 con simulacion

--- a/TP/TP1/Tp1_Pepe-checkpoint.ipynb
+++ b/TP/TP1/Tp1_Pepe-checkpoint.ipynb
@@ -154,9 +154,9 @@
     "{Zin}={K*Zl} \n",
     "\\end{equation}\n",
     "\n",
-    "a) Este circuito es conocido como NIC (negative impedance converter) y como bien lo indica su nombre funciona como una imoedancia negativa, esto se logra invirtiendo la polaridad de la tension o la dirección de la corriente de entrada e induce un cambio de fase de 180 ° entre la tencion y la corriente para cualquier generador de señal. \n",
+    "a) Este circuito es conocido como NIC (negative impedance converter) y como bien lo indica su nombre funciona como una imoedancia negativa, esto se logra invirtiendo la polaridad de la tension o la dirección de la corriente de entrada e induce un cambio de fase de 180 ° entre la tencion y la corrientel. \n",
     "\n",
-    "b) \n",
+    "b) Ambos circuitos son VNIC generando a partir de una tension aplicada una corriente de distinto signo  \n",
     "\n",
     "![image-2.png](attachment:image-2.png)"
    ]
