TS4 terminada (sin simulacion en LTSPICE)

--- a/TS3/TS3.ipynb
+++ b/TS3/TS3.ipynb
@@ -181,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 15,
    "id": "88f0a2a2",
    "metadata": {},
    "outputs": [
@@ -189,11 +189,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Raices de ambas = [-1.09387705+0.45309871j -1.09387705-0.45309871j -0.45309871+1.09387705j\n",
-      " -0.45309871-1.09387705j  0.45309871+1.09387705j  0.45309871-1.09387705j\n",
-      "  1.09387705+0.45309871j  1.09387705-0.45309871j]\n",
-      "Raices = [-1.09387705+0.45309871j -1.09387705-0.45309871j -0.45309871+1.09387705j\n",
-      " -0.45309871-1.09387705j]\n"
+      "Raices de ambas = [-0.14901791+0.90366975j -0.14901791-0.90366975j  0.14901791+0.90366975j\n",
+      "  0.14901791-0.90366975j -0.29803582+0.j          0.29803582+0.j        ]\n",
+      "Raices = [-0.14901791+0.90366975j -0.14901791-0.90366975j -0.29803582+0.j        ]\n"
      ]
     }
    ],
