--- a/TS5/TS5.ipynb
+++ b/TS5/TS5.ipynb
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 297,
+   "execution_count": 1,
    "id": "0797780d",
    "metadata": {},
    "outputs": [
@@ -240,9 +240,41 @@
    "id": "a5bba21b",
    "metadata": {},
    "source": [
+    "Partiendo de :\n",
     "\\begin{equation}\n",
-    "(T(s) = \\frac{(S^2)}{(S^2 +(1/Q) +1)}\n",
-    "\\end{equation}"
+    "T(s) =K \\frac{S^2 + \\frac{Wn}{Qn}S + Wn^2}{S^2 + \\frac{Wp}{Qp}S +Wp^2}\n",
+    "\\end{equation}\n",
+    "\n",
+    "Qp para aplicar a la consigna tiene un valor constante de 1/raiz(2) = 0.7071 y K=1\n",
+    "\n",
+    "Caso A:\n",
+    "\n",
+    "\\begin{equation}\n",
+    "T(s) =K \\frac{S^2 + \\frac{0.1}{10000}S + 0.1^2}{S^2 + \\frac{0.05}{0.7071}S +0.05^2}\n",
+    "\\end{equation}\n",
+    "\n",
+    "Caso B:\n",
+    "\n",
+    "\\begin{equation}\n",
+    "T(s) =K \\frac{S^2 + \\frac{1.9952}{10000}S + 1.9952^2}{S^2 + \\frac{1}{0.7071}S +1^2}\n",
+    "\\end{equation}\n",
+    "\n",
+    "Caso C:\n",
+    "\n",
+    "\\begin{equation}\n",
+    "T(s) =K \\frac{S^2 -\\frac{1}{0.7071}S + 1^2}{S^2 + \\frac{1}{0.7071}S +1^2}\n",
+    "\\end{equation}\n",
+    "\n",
+    "Caso D:\n",
+    "\n",
+    "\\begin{equation}\n",
+    "T(s) =K \\frac{S^2 + \\frac{1}{10000}S + 1^2}{S^2 + \\frac{0.5}{0.7071}S +0.5^2}\n",
+    "\\end{equation}\n",
+    "\n",
+    "En los casos B y C, K podria tomar cualquier valor ya que no modifica la fase de los mismos \n",
+    "En los casos A y D son iguales pero D esta desfazada \n",
+    "\n",
+    "En los casos A , B , D se estaria comporando practicamente como un filtro pasabajos ya que Qz>>Wz"
    ]
   },
   {
@@ -252,7 +284,7 @@
     }
    },
    "cell_type": "markdown",
-   "id": "b37db6bd",
+   "id": "866f96e0",
    "metadata": {},
    "source": [
     "##### Ejercicio 3\n",
@@ -270,7 +302,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "41fad03a",
+   "id": "135b3206",
    "metadata": {},
    "outputs": [],
    "source": []
