--- a/TS3/TS3.ipynb
+++ b/TS3/TS3.ipynb
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "id": "dd560760",
    "metadata": {},
    "outputs": [
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "id": "f367634f",
    "metadata": {},
    "outputs": [
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "id": "59486d88",
    "metadata": {},
    "outputs": [
@@ -139,7 +139,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epsilon = 0.5088471399095875,N_MP = 4\n"
+      "Epsilon = 0.5088471399095875,N_MP = 3.7556772623609205\n"
      ]
     }
    ],
@@ -157,7 +157,7 @@
     "N = (m.log10( (m.pow(10,Alfa_min * 0.1) - 1) / (m.pow(10,Alfa_max * 0.1) - 1) ) ) / ( 2 * m.log10(Ws_LP))\n",
     "\n",
     "\n",
-    "N=m.ceil(N)\n",
+    "#N=m.ceil(N)\n",
     "print(f'Epsilon = {Epsilon},N_MP = {N}')"
    ]
   },
