--- a/TS6/TS6.ipynb
+++ b/TS6/TS6.ipynb
@@ -272,7 +272,7 @@
     }
    },
    "cell_type": "markdown",
-   "id": "9199a2cb",
+   "id": "d917c45e",
    "metadata": {},
    "source": [
     "### C\n",
@@ -334,7 +334,7 @@
     }
    },
    "cell_type": "markdown",
-   "id": "b2b205a7",
+   "id": "b40bd9a6",
    "metadata": {},
    "source": [
     "### D\n",
@@ -353,13 +353,13 @@
     "\n",
     "A=5/9\n",
     "\n",
-    "Respecto a las diferencias la primera y mas evidente es la cantidad de componentes que requiere la propuesta por el Shauman por lo que indica que es mas costosa su produccion , Tambien se observan las simulitudes que tienen ya que ambos estab basados en un circuito GIC de Antoniu"
+    "Respecto a las diferencias la primera y mas evidente es la cantidad de componentes que requiere la propuesta por el Shauman por lo que indica que es mas costosa su produccion , Tambien se observan las simulitudes que tienen ya que ambos estab basados en un circuito GIC de Antoniou."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aad8f5c8",
+   "id": "1d12d94f",
    "metadata": {},
    "outputs": [],
    "source": []
