TS9 y TS8 (Con parte escrita)

--- a/TS9/TS9.ipynb
+++ b/TS9/TS9.ipynb
@@ -70,7 +70,7 @@
   {
    "attachments": {},
    "cell_type": "markdown",
-   "id": "0ff6822b",
+   "id": "eb69eb97",
    "metadata": {},
    "source": [
     "Fase:\n",
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6debc93b",
+   "id": "771b66e7",
    "metadata": {},
    "source": [
     "Retardo:\n",
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7268e07e",
+   "id": "e832c434",
    "metadata": {},
    "source": [
     "Respuesta el impulso:\n",
@@ -117,12 +117,12 @@
     }
    },
    "cell_type": "markdown",
-   "id": "ccef9810",
+   "id": "98c45d76",
    "metadata": {},
    "source": [
     "Filtro FIR:\n",
     "\n",
-    "Se obsterva que el orden del filtro Fir es mucho mas elevado (Aprox N=1600) que el del IIR\n",
+    "Se obsterva que el orden del filtro Fir es mucho mas elevado (Aprox 10 veces mayor) que el del IIR\n",
     "Modulo:\n",
     "A frecuencia :150\n",
     "![image-5.png](attachment:image-5.png)\n",
@@ -144,7 +144,7 @@
     }
    },
    "cell_type": "markdown",
-   "id": "f5dc868e",
+   "id": "549f601c",
    "metadata": {},
    "source": [
     "Fase:\n",
@@ -166,7 +166,7 @@
     }
    },
    "cell_type": "markdown",
-   "id": "a890940e",
+   "id": "aeb38629",
    "metadata": {},
    "source": [
     "Retardo:\n",
@@ -188,7 +188,7 @@
     }
    },
    "cell_type": "markdown",
-   "id": "948df6b7",
+   "id": "b002d5d2",
    "metadata": {},
    "source": [
     "Respuesta al impulso:\n",
@@ -208,7 +208,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Inicialización e importación de módulos\n",
+    "# Parte 2\n",
     "\n",
     "# Módulos para Jupyter\n",
     "import warnings\n",
